--- a/templates/add_job_for_date.html
+++ b/templates/add_job_for_date.html
@@ -3,6 +3,7 @@
 <h2 class="text-center heading">Add Job for {{ date }}</h2>
 
 <form method="POST" class="form-container">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <input type="hidden" name="start_date" value="{{ date }}">
     <input type="hidden" name="end_date" value="{{ date }}">
     {% include "_job_fields.html" with context %}
