--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -4,6 +4,7 @@
 <h2 class="text-center heading">Change Password</h2>
 
 <form method="POST" class="form-container card">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
 
     <div class="form-group">
         <label for="current_password">Current Password:</label>
