--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,7 @@
 </div>
 
 <form method="POST" class="auth-form">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <div class="form-group">
         <label for="username">Username:</label>
         <input type="text" name="username" required>
