--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,7 @@
 
     {% block scripts %}
         <script defer src="{{ url_for('static', filename='js/password-peek.js') }}"></script>
+        <script defer src="{{ url_for('static'), filename='js/timeoff-form.js') }}"></script>
     {% endblock %}
 </body>
 </html>
